Revert "setting update"
This reverts commit 5f904ebb755922cd72d37b5aa9700f940a9ebf95.

--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -88,10 +88,10 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                                                     <a href="/product/add/"><?= $this->translate('Add Product') ?></a>
                                                 </li>
                                                 <li class="link">
-                                                    <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>"><?= $this->translate('Products') ?></a>
+                                                    <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>"><?= $this->translate('My Products') ?></a>
                                                 </li>
                                                 <li class="link">
-                                                    <a href="/settings/"><?= $this->translate('Settings') ?></a>
+                                                    <a href="/settings/"><?= $this->translate('My Settings') ?></a>
                                                 </li>
                                                 <li class="link">
                                                     <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
