--- a/application/modules/default/views/scripts/settings/partials/password.phtml
+++ b/application/modules/default/views/scripts/settings/partials/password.phtml
@@ -20,9 +20,17 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 ?>
+<div class="panel-heading">
+    <h4 class="panel-title">
+        <a data-toggle="collapse" href="#password-collapse" data-parent="#accordion" id="password-trigger">
+            <span class="glyphicon glyphicon-lock"></span>
+            <?= $this->translate('Password') ?>
+            <span class="absolute glyphicon glyphicon-chevron-down"></span>
+        </a>
+    </h4>
+</div>
 
-
-<div class="panel-collapse " id="password-collapse">
+<div class="panel-collapse collapse" id="password-collapse">
     <div class="panel-body">
         <form class="standard-form well partial" action="<?= $this->passwordform->getAction(); ?>"
               method="<?= $this->passwordform->getMethod(); ?>" data-target="#form-password"
