--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -43,7 +43,7 @@ $this->tab = 'products';
                 <!-- /NAVIGATION -->
 
                 <div class="my-products-heading">
-                    <h1 class="page-title left"><?= $this->translate('My Products') ?></h1>
+                    <h1 class="page-title left"><?= $this->translate('Products') ?></h1>
 
                     <div class="right light lightgrey num-products">
                         <span class="label label-default">
