--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -151,6 +151,7 @@ $helperImage = new Default_View_Helper_Image();
     <!-- CONTENT -->
     <!-- MODALS -->
 
+    <?/*
     <!-- button code modal -->
     <div id="modal-button-code-<?= $loopProductId ?>" class="code-embed-modal modal fade">
         <div class="modal-dialog content-modal">
@@ -176,6 +177,7 @@ $helperImage = new Default_View_Helper_Image();
         </div>
     </div>
     <!-- /button code modal -->
+    */ ?>
 
     <!-- box code modal -->
     <div id="modal-box-code-<?= $loopProductId ?>" class="code-embed-modal modal fade">
@@ -203,6 +205,7 @@ $helperImage = new Default_View_Helper_Image();
     </div>
     <!-- /box code modal -->
 
+<?php /*
     <!-- list code modal -->
     <div id="modal-list-code-<?= $loopProductId ?>" class="code-embed-modal modal fade">
         <div class="modal-dialog content-modal">
@@ -227,6 +230,7 @@ $helperImage = new Default_View_Helper_Image();
         </div>
     </div>
     <!-- /list code modal -->
+
 
     <!-- widget code modal -->
     <div id="modal-widget-code-<?= $loopProductId ?>" class="code-embed-modal modal fade">
@@ -254,7 +258,7 @@ $helperImage = new Default_View_Helper_Image();
         </div>
     </div>
     <!-- /widget code modal -->
-
+*/ ?>
     <!-- verification code -->
     <?php
     $verificationPopup = new Default_View_Helper_VerificationCodePopup();
