--- a/httpdocs/partials/terms.phtml
+++ b/httpdocs/partials/terms.phtml
@@ -5,5 +5,7 @@
 <br>
     <h3 class="lightblue"><a href="/terms/general">General Terms &amp; Conditions</a></h3>
     <br>
-    <h3 class="lightblue"><a href="/terms/publishing">File Publishing Terms &amp; Conditions</a></h3>
+    <h3 class="lightblue"><a href="/terms/publishing">Publishing Terms &amp; Conditions</a></h3>
+    <br>
+    <h3 class="lightblue"><a href="/terms/dmca">DMCA Notification</a></h3>
 </div>
