--- a/httpdocs/partials/terms-dmca.phtml
+++ b/httpdocs/partials/terms-dmca.phtml
@@ -15,8 +15,8 @@
         <p>&nbsp;</p>
         <div class="term"><br>
             <div class="term-description">
-                To file a copyright infringement notification with OpenDesktop.org (also commonly known as a "DMCA takedown notice"), the copyright owner or an authorized agent acting on his or her behalf will need to send a written communication that includes substantially the following:
-                <ol>
+                <p>To file a copyright infringement notification with OpenDesktop.org (also commonly known as a "DMCA takedown notice"), the copyright owner or an authorized agent acting on his or her behalf will need to send a written communication that includes substantially the following:</p>
+                <ol type="1">
                     <li>A physical or electronic signature of the copyright owner or of a person authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
                     <li>Identification of the copyrighted work claimed to have been infringed, or, if multiple copyrighted works at a single online site are covered by a single notification, a representative list of such works at that site.</li>
                     <li>Identification of the material that is claimed to be infringing or to be the subject of infringing activity and that is to be removed or access to which is to be disabled, and information reasonably sufficient to permit the service provider to locate the material. In this regard please provide URLs when you identify the location of the material.</li>
@@ -25,10 +25,16 @@
                     <li>A statement that the information in the notification is accurate, and under penalty of perjury, that the complaining party is authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
                     <li>infringe on or violate any applicable law or regulation.</li>
                 </ol> 
+                
+                
 
-                To file a DMCA takedown notice, you may use our form here. This form requires a OpenDesktop.org account, which is available at no charge by signing up. Otherwise you may use the following method:
+                <p>To file a DMCA takedown notice, you may use our form here. This form requires a OpenDesktop.org account, which is available at no charge by signing up. Otherwise you may use the following method:</p>
+                <br>
+                <br>
                 <br>
                 Written notice should be sent by mail or by PDF attached to an email to OpenDesktop.org's designated agent as follows:
+                <br>
+                <br>
                 
                 DMCA Complaints<br>
                 Pling GmbH<br>
@@ -37,18 +43,18 @@
                 33649 Bielefeld Fax: +49.521.417.699.29<br>
                 Germany<br>
                 Email: contact@opendesktop.org<br>
-                
+                <br>
+                <br>
                 <p>Under Section 512(f) of the Copyright Act any person who knowingly materially misrepresents that material or activity is infringing may be subject to liability. Consult your legal counsel or see Section 512(c)(3) of 17 U.S.C. to clarify or confirm the requirements of the notice.</p>
-                
-                
             </div>
         </div>
         <div class="term"><br>
             <div class="term-description">
                 Counter-Notification
-                
+                <br>
+                <br>
+                <br>
                 <p>If you want to send OpenDesktop.org a counter notice, please review this information for instructions.</p>
-                
                 <p>Under Section 512(f) of the Copyright Act, any person who knowingly materially misrepresents that material or activity was removed or disabled by mistake or misidentification may be subject to liability. Please consult OpenDesktop.org's Terms of Service in which we explain that you may be removed from the site if you are a repeat infringer or if you violate OpenDesktop.org's policies.</p>
             </div>
         </div>
