--- a/httpdocs/partials/terms-dmca.phtml
+++ b/httpdocs/partials/terms-dmca.phtml
@@ -13,9 +13,10 @@
         </div>
         <!-- /.term -->
         <p>&nbsp;</p>
-        <div class="term"><br>
+        <div class="term">
             <div class="term-description">
                 <p>To file a copyright infringement notification with OpenDesktop.org (also commonly known as a "DMCA takedown notice"), the copyright owner or an authorized agent acting on his or her behalf will need to send a written communication that includes substantially the following:</p>
+                <br>
                 <ol type="1">
                     <li>A physical or electronic signature of the copyright owner or of a person authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
                     <li>Identification of the copyrighted work claimed to have been infringed, or, if multiple copyrighted works at a single online site are covered by a single notification, a representative list of such works at that site.</li>
@@ -25,17 +26,11 @@
                     <li>A statement that the information in the notification is accurate, and under penalty of perjury, that the complaining party is authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
                     <li>infringe on or violate any applicable law or regulation.</li>
                 </ol> 
-                
-                
-
                 <p>To file a DMCA takedown notice, you may use our form here. This form requires a OpenDesktop.org account, which is available at no charge by signing up. Otherwise you may use the following method:</p>
-                <br>
-                <br>
                 <br>
                 Written notice should be sent by mail or by PDF attached to an email to OpenDesktop.org's designated agent as follows:
                 <br>
                 <br>
-                
                 DMCA Complaints<br>
                 Pling GmbH<br>
                 attn. Marc Juenger<br>
@@ -44,14 +39,12 @@
                 Germany<br>
                 Email: contact@opendesktop.org<br>
                 <br>
-                <br>
                 <p>Under Section 512(f) of the Copyright Act any person who knowingly materially misrepresents that material or activity is infringing may be subject to liability. Consult your legal counsel or see Section 512(c)(3) of 17 U.S.C. to clarify or confirm the requirements of the notice.</p>
             </div>
         </div>
         <div class="term"><br>
             <div class="term-description">
                 Counter-Notification
-                <br>
                 <br>
                 <br>
                 <p>If you want to send OpenDesktop.org a counter notice, please review this information for instructions.</p>
