--- a/httpdocs/partials/terms-dmca.phtml
+++ b/httpdocs/partials/terms-dmca.phtml
@@ -25,15 +25,16 @@
                 <br>
                 <p>To file a DMCA takedown notice, you may use our form here. This form requires a OpenDesktop.org account, which is available at no charge by signing up. Otherwise you may use the following method:</p>
                 <br>
-                Written notice should be sent by mail or by PDF attached to an email to OpenDesktop.org's designated agent as follows:
+                Written notice should either be sent by PDF attached to an email or by mail to OpenDesktop.org's designated agent as follows:
                 <br>
                 <br>
-                DMCA Complaints<br>
-                Pling GmbH<br>
-                attn. Marc Juenger<br>
+                Hive01 GmbH<br>
+                DMCA Complaints attn. Marc Juenger<br>
                 Am Speksel 10<br>
-                33649 Bielefeld Fax: +49.521.417.699.29<br>
+                33649 Bielefeld<br>
                 Germany<br>
+                <br>
+                Fax: +49.521.417.699.29<br>
                 Email: contact@opendesktop.org<br>
                 <br>
                 <p>Under Section 512(f) of the Copyright Act any person who knowingly materially misrepresents that material or activity is infringing may be subject to liability. Consult your legal counsel or see Section 512(c)(3) of 17 U.S.C. to clarify or confirm the requirements of the notice.</p>
