--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -379,6 +379,7 @@ ul.meta-nav-top
         height: 12px;
         background-image: url(../img/bg_sheet.png);
         background-position: -385px 0;
+
     }
 
     a {
@@ -5463,5 +5464,13 @@ main#plings-page{
         -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,.05);
         box-shadow: inset 0 0px 0px rgba(0,0,0,.05);
     }
+    }
+  }
+
+  .profile-menu{
+    li{
+      a{
+        width: 100%;
+      }
     }
   }
