--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1728,7 +1728,9 @@ ul.meta-nav-top
             }
 
         }
-
+        #files-panel{
+          padding-top: 30px;
+        }
     }
 
     
@@ -3996,7 +3998,7 @@ span.page-views {
   }
 
   #files-panel {
-      font-size: 10pt;
+      font-size: 10pt;     
   }
 
   #comments-frame {
