--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -279,6 +279,7 @@ $this->updates = $tableProjectUpdates->fetchProjectUpdates($this->product->proje
 
                         <!-- updates panel -->
                         <div class="tab-pane" id="updates-panel">
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
                             <article>
                                 <?php if (count($this->updates) > 0) {
                                     foreach ($this->updates as $this->productUpdate) {
@@ -286,6 +287,7 @@ $this->updates = $tableProjectUpdates->fetchProjectUpdates($this->product->proje
                                     }
                                  } ?>
                             </article>
+                            </div>
                         </div>
 
                         <div class="tab-pane" id="files-panel">
