update changelog hide when less than one

--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1731,6 +1731,11 @@ ul.meta-nav-top
         #files-panel{
           padding-top: 30px;
         }
+        #updates-panel{
+          span.product-update-date{
+            padding-left: 10px;
+          }
+        }
     }
 
     
