--- a/application/modules/default/views/scripts/product/partials/productUpdatesV1.phtml
+++ b/application/modules/default/views/scripts/product/partials/productUpdatesV1.phtml
@@ -24,10 +24,7 @@ $helperHumanTiming = new Default_View_Helper_HumanTiming();
 $date = $helperHumanTiming->humanTiming($this->productUpdate['created_at']);
 $helpBBCode = new Default_View_Helper_Bbcode2html();
 ?>
-<a name="anker_<?= $this->productUpdate['project_update_id'] ?>"></a>
-<h3 class="product-heading product-update-heading" style="float: left; width: 100%">
-    <?= $this->productUpdate['title'] ?><span class="small light lightgrey product-update-date"
-                             style="padding-left: 10px;"> <?= $date['age'] ?> <?= $date['unit'] ?> ago</span>
+<h3 class="product-heading product-update-heading" >
+    <?= $this->productUpdate['title'] ?><span class="small light lightgrey product-update-date"> <?= $date['age'] ?> <?= $date['unit'] ?> ago</span>
 </h3>
-
 <p><?= $helpBBCode->Bbcode2html($this->productUpdate['text']) ?></p>
