--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -151,6 +151,8 @@ echo $this->render('partials/propagateLogout.phtml');
 
     </script>
 <?php } ?>
-
+<?php
+ echo $this->render('partials/profiler.phtml')
+?>
 </body>
 </html>
