--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -197,7 +197,9 @@ $this->updates = $tableProjectUpdates->fetchProjectUpdates($this->product->proje
                             <li><a href="#files-panel" data-toggle="tab">Files <?php if ($productFileInfos['fileCount'] > 0) {
                                         echo '(' . $productFileInfos['fileCount'] . ')';
                                     } ?></a></li>
-                            <li><a href="#updates-panel" data-toggle="tab">Changelogs <?php if(count($this->updates)>0) { echo '('.count($this->updates).')';} ?></a></li>
+                        <?php if(count($this->updates)>0){ ?>
+                            <li><a href="#updates-panel" data-toggle="tab">Changelogs <?php echo '('.count($this->updates).')';  ?></a></li>
+                        <?php } ?>
                         </ul>
                     </div>
                     <!-- /TABS -->
@@ -278,15 +280,19 @@ $this->updates = $tableProjectUpdates->fetchProjectUpdates($this->product->proje
                         <!-- /MEDIA -->
 
                         <!-- updates panel -->
+                        <?php  if (count($this->updates) > 0) { ?>
                         <div class="tab-pane" id="updates-panel">
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
                             <article>
-                                <?php if (count($this->updates) > 0) {
+                                <?php
                                     foreach ($this->updates as $this->productUpdate) {
                                        echo $this->render('product/partials/productUpdatesV1.phtml');
                                     }
-                                 } ?>
+                                  ?>
                             </article>
+                            </div>
                         </div>
+                        <?php } ?>
 
                         <div class="tab-pane" id="files-panel">
                             <div class="col-lg-12">
